# cmakes-helloworld

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose-db.yml  helloworld.cpp  phpsample.Dockerfile  phpsample.conf  phpsample.php  program.cpp  pyFastapiUvicorn.Dockerfile  pysample.Dockerfile  pysample.py
Angular/: angular.Dockerfile  angular.nginx.conf
Mnvn.WebAppDockerTest/: Dockerfile  Dockerfile.original  Mnvn.WebAppDockerTest.csproj  Mnvn.WebAppDockerTest.sln  Program.cs  Startup.cs  dockerreadme.md  npm.config
Mnvn.WebAppDockerTest/Controllers/: HomeController.cs
Mnvn.WebAppDockerTest/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs
Mnvn.WebAppDockerTest/Properties/: launchSettings.json
Mnvn.WebAppDockerTest/Properties/PublishProfiles/: registry.hub.docker.com_badpaybad.pubxml
Mnvn.WebAppDockerTest/Ultis/: CommandExecutor.cs
Mnvn.WebAppDockerTest/Views/: _ViewImports.cshtml
Mnvn.WebAppDockerTest/Views/Home/: Index.cshtml
Mnvn.WebAppDockerTest/Views/Shared/: _Layout.cshtml
Mnvn.WebAppDockerTest/api/: FfmpegController.cs
Mnvn.WebAppDockerTest/k8s/: k8s.dashboard.adminuser.yaml  k8s.dashboard.clusterrole.yaml  k8sreadme.md  mnvntest.deploy.yaml  mnvntest.service.yaml
cmakesample/cmakesharedlib/: CMakeLists.txt
cmakesample/cmakestaticlib/: CMakeLists.txt
cmakesample/cmakeusage/: CMakeLists.txt
cppsample/: CMakeLists.txt  cppsample  program.cpp  readme.md
cppsample/libs/: ProgramContext.cpp  ProgramEventLoop.cpp  ProgramEventLoop.h  common.h  curses.cpp  curses.h
k8s/: Dockerfile  Dockerfile.original  dockerreadme.md  k8s.dashboard.adminuser.yaml  k8s.dashboard.clusterrole.yaml  k8sreadme.md  mnvntest.deploy.yaml  mnvntest.service.yaml
libs/: CMakeLists.txt  httpserver.cpp  httpserver.h  human.cpp  human.h
